# cpp_training_programs

./: bubbleSorting.cpp  degreesConversion.cpp
Calculator/: README.md
Calculator/Calculator/consoleCalculator/: CMakelists.txt  Calculator  README.md
Calculator/Calculator/consoleCalculator/include/: math_operations.h
Calculator/Calculator/consoleCalculator/src/: math_operations.cpp
Calculator/guicalculator/: CMakeLists.txt  README.md  qml.qrc
Calculator/guicalculator/builds/macOS/: Calculator.dmg
Calculator/guicalculator/icons/: Calculator.icns
Calculator/guicalculator/include/: mathOperations.h
Calculator/guicalculator/qml/: Buttons.qml  StyledButton.qml  main.qml
Calculator/guicalculator/src/: main.cpp  mathOperations.cpp
Calculator/oopCalculator/: CMakeLists.txt  README.md
Calculator/oopCalculator/include/: mathOperations.h
Calculator/oopCalculator/src/: main.cpp  mathOperations.cpp
Calculator/proceduralCalculator/: CMakelists.txt
Calculator/proceduralCalculator/src/: main.cpp
Documents/sddfv/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Signals-Slots-in-Qt/: CMakeLists.txt  Firefox.h  README.md  UserInteractor.cpp  internetexplorer.cpp  main.cpp
Signals-Slots-in-Qt/include/: UserInteractor.h  internetexplorer.h
Signals-Slots-in-Qt/src/: Firefox.cpp  UserInteractor.cpp  internetexplorer.cpp  main.cpp
build-Signals-Slots-in-Qt-Replacement_for_Qt_6_7_2_for_macOS-Debug/: README.md  Signals-Slots-in-Qt
test/: CMakeLists.txt  main.cpp
